fix gap in my trades columns

--- a/src/js/pages/MyTrades/components/Trades.scss
+++ b/src/js/pages/MyTrades/components/Trades.scss
@@ -5,3 +5,9 @@
     height: 40px;
   }
 }
+
+.offer-card {
+  .col-md-1:first-child {
+    max-width: 65px;
+  }
+}
